# modelagem_bd

./: README.md  pyproject.toml
scripts/lab_01/: coyote_script.sql  documentation_coyte.html
